--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -37,13 +37,13 @@ auth_8 : "┗ Added By:-"
 
 # PLUGINS - Admins
 admin_1 : "Music is already Paused."
-admin_2 : "🎧 Voicechat Paused by {}!"
+admin_2 : "😐 BABY Paused by {}!"
 admin_3 : "Music is already resumed."
-admin_4 : "🎧 Voicechat Resumed by {}!"
+admin_4 : "😌 BABY Resumed by {}!"
 admin_5 : "Music is already muted."
 admin_6 : "🥲 BABY Muted by {}!"
 admin_7 : "Music is already unmuted."
-admin_8 : "🎧 BABY Unmuted by {}!"
+admin_8 : "😘 BABY Unmuted by {}!"
 admin_9 : "😐 STOPPED BABY BY {}!"
 admin_10 : "🎧 Voicechat Skipped by {}!. No More Music in Queue."
 admin_11 : "Error while changing stream to **{0}**\n\nPlease use /skip again."
@@ -55,7 +55,7 @@ admin_16 : "Failed to skip to specific track.\n\nCheck left queue by /queue"
 admin_17 : "{0}.. Please Wait"
 admin_18 : "Admin List Not Found\n\nPlease reload adminlist via /admincache or /reload"
 admin_19 : "You need to be admin with manage voice chat rights to perform this.\nIf you're already admin, reload admincache via /admincache "
-admin_20 : "Admin cache reloaded successfully."
+admin_20 : "🔥 BABY lets go."
 admin_21 : "Nothing inside queue to shuffle"
 admin_22 : "Failed to shuffle.\n\nCheck queue : /queue"
 admin_23 : "**Queue Shuffled by {0}**\n\nCheck shuffled queue : /queue"
