--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -45,7 +45,7 @@ admin_6 : "🥲 BABY Muted by {}!"
 admin_7 : "Music is already unmuted."
 admin_8 : "😘 BABY Unmuted by {}!"
 admin_9 : "😐 STOPPED BABY BY {}!"
-admin_10 : "🎧 Voicechat Skipped by {}!. No More Music in Queue."
+admin_10 : "🥴 BABY Skipped by {}!. No More Music in Queue."
 admin_11 : "Error while changing stream to **{0}**\n\nPlease use /skip again."
 admin_12 : "Unable to skip to a specific track because of enabled loop play. Please disable loop play via `/loop disable` to use this feature."
 admin_13 : "Please use numeric numbers for specific tracks, like 1, 2 or 4 etc"
